--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,18 @@ volumes:
     caddy_config:
 
 services:
-    app:
-        container_name: app
+    custom-caddy:
+        container_name: custom-caddy
         build:
             context: .
             dockerfile: Dockerfile
             target: build-development
-        image: app:caddy
+        image: dockerized-php-caddy:dev
         restart: unless-stopped
         tty: true
+        environment:
+            - HOSTNAME=localhost
+            - PHP_FPM_GATEWAYS=:9000
         volumes:
             - ./build/Caddyfile:/etc/caddy/Caddyfile:ro
             - ./src:/var/www/html
@@ -22,7 +25,9 @@ services:
             - 443:443
             - 443:443/udp
         healthcheck:
-            test: ["CMD", "wget", "--spider", "https://website.localhost/healthcheck"]
-            interval: 10s
+            test: ["CMD", "wget", "--no-check-certificate", "--spider", "https://localhost/healthcheck"]
+            interval: 30s
             timeout: 1s
             retries: 3
+            start_period: 10s
+            #start_interval: 2s
